--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,37 @@
-- The system must have a workflow engine.
-- The workflow engine consists of three parts
-	- Forms engine
-		- fields
-			- field can auto-populate from other records
-				- there has to be an option for specify if the auto-population is live, dead-on-arrival, or dead-on-condition
-		- view
-	- workflow engine
-		- definition of steps and actions
-		- definition of validations per action
-			- validations must be action specific. For example, if the selected action is to reject the record, there is no need to verify anything.
-		
-	- 
+- The workflow engine must be built as a javascript library
+- The library must provide functions to create its own datamodel inside a database as per the developers choosing
+	- The developer might choose a separate database for the datamodel of the library
+	- The developer might choose a separate schema for the datamodel of the library
+
+- The library must provide functions to create/modify/delete Forms
+	- Forms must contain blocks
+	- Blocks contain fields
+	- What fields will be read-only, editable, or required is not the concern of the forms functions
+	- fields
+		- field can auto-populate from other records
+			- there has to be an option for specify if the auto-population is live, dead-on-arrival, or dead-on-condition
+	- view
+- workflow engine
+	- definition of steps and actions
+	- definition of validations per action
+		- validations must be action specific. For example, if the selected action is to reject the record, there is no need to verify anything.
+
+- The system must allow for fields to have formula
+- The system must allow for bi-directional formulas
+	- 3 fields (or more) all have formula
+	- input values in first n fields, the last will be calculated by the formula
+	- the oldest updated field will be set to formula if a new field is updated manually
+- Formulas can have any of the following logic
+	- Arithmetics: +,-,*,/,^,log ... etc
+	- logical operators such as: and, or, not, xor, xnor ... etc
+	- if conditions such as: if, else if, else
+	- conditionals such as >,<,>=,<=,=,!= ... etc
+	- Date arithmatics and conditionals
+	- String operations: substring, concatenate, split ... etc
+	- Lookup functions??
+	- Rollup fields (for lineitems/sub-records)
+- The system must allow for merging records
+- The system must provide drag-fill functionality for cells
+- The system must allow for linking the records with email threads
+- The system must allow for transactional processing
+- The system must provide the capability to control access as per the principals of Variant-Based Access Control
