--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,13 @@
 		- field can auto-populate from other records
 			- there has to be an option for specify if the auto-population is live, dead-on-arrival, or dead-on-condition
 	- view
+- The system must allow for creation of tables/lineitems in a form.
+- Lineitems can be viewed in the record as tables or as tab that shows them as records on their own.
+
+- The system must allow for multi-leveled record creation in the form of parent-child relationship.
+	- This allows establishing trees.
+	- The system must also allow visualizaing this type of records as trees
+
 - workflow engine
 	- definition of steps and actions
 	- definition of validations per action
@@ -38,6 +45,7 @@
 - The system must provide multiple options for view of the log of the register/sheet
 - The system must allow for transactional processing
 - The system must provide the capability to control access as per the principals of Variant-Based Access Control
+- Access control is also to be defined at field-level
 - The system must allow the user to create his own sheets
 - The system must provide OCR capability to generate searchable content for files
 - The system must provide the capability to store files in a tag-based file system
@@ -45,10 +53,11 @@
 
 
 - Field Names can be changed
-- How will dataviews deal with name changes?
+	- How will dataviews deal with name changes?
 - The system must allow for a balance sheet like functionality
 	- Similar to SOV in Unifier
 	- Similar to a booking calendar
+	- Similar to seat availablity on air-planes
 	- This requires transactional processing
 - The system must provide the capability to upload files
 	- The system must provide the capability to resume upload/download
@@ -57,3 +66,5 @@
 - The workflow must provide steps for automated actions
 	- send emails
 	- run integrations
+	- Exponential Back-Off
+	- Rate Limiting
