--- a/requirements.txt
+++ b/requirements.txt
@@ -14,28 +14,27 @@
 			- there has to be an option for specify if the auto-population is live, dead-on-arrival, or dead-on-condition
 	- views
 
-- The system must allow for fields to have formula
-- The system must allow for bi-directional formulas
-	- 3 fields (or more) all have formula
-	- input values in first n fields, the last will be calculated by the formula
-	- the oldest updated field will be set to formula if a new field is updated manually
-- Formulas can have any of the following logic
-	- Arithmetics: +,-,*,/,^,log ... etc
-	- logical operators such as: and, or, not, xor, xnor ... etc
-	- if conditions such as: if, else if, else
-	- conditionals such as >,<,>=,<=,=,!= ... etc
-	- Date arithmatics and conditionals
-	- String operations: substring, concatenate, split ... etc
-	- Lookup functions??
-	- Rollup fields (for lineitems/sub-records)
-
 - The system must allow for merging records
+- The system must allow for cloning records
 - The system must provide drag-fill functionality for cells
-- The system must allow for linking the records with email threads
 
-
-- Field Names can be changed
-	- How will dataviews deal with name changes?
+- Fields Definition
+	- Field Names can be changed
+		- How will dataviews deal with name changes?
+	- The system must allow for fields to have formula
+		- The system must allow for bi-directional formulas
+			- 3 fields (or more) all have formula
+			- input values in first n fields, the last will be calculated by the formula
+			- the oldest updated field will be set to formula if a new field is updated manually
+		- Formulas can have any of the following logic
+			- Arithmetics: +,-,*,/,^,log ... etc
+			- logical operators such as: and, or, not, xor, xnor ... etc
+			- if conditions such as: if, else if, else
+			- conditionals such as >,<,>=,<=,=,!= ... etc
+			- Date arithmatics and conditionals
+			- String operations: substring, concatenate, split ... etc
+			- Lookup functions??
+			- Rollup fields (for lineitems/sub-records)
 
 - Transactional Processing
 	- The system must allow for transactional processing
@@ -82,6 +81,7 @@
 		- example Zoho Desk
 			- View can be set to show the record field on the side
 			- The main body of the record shows email threads
+	- The system must allow for linking the records with email threads
 
 - Access Control
 	- Workflow steps can have assigned groups
