--- a/requirements.txt
+++ b/requirements.txt
@@ -15,29 +15,11 @@
 	- views
 
 - The system must allow for merging records in the same register/sheets
-- The system must allof for merging registers/sheets
+- The system must allow for merging registers/sheets
 	- This is necessary as you might need multiple registers/sheets to model the as-is business of diffferent organizations. Then, you might need to merge these registers/sheets (as part of the standardization process) according to the to-be business model.
 - The system must allow for cloning records
 - The system must provide drag-fill functionality for cells
 - The system must provide real-time (multiplayer) collaboration capability.
-
-- Fields Definition
-	- Field Names can be changed
-		- How will dataviews deal with name changes?
-	- The system must allow for fields to have formula
-		- The system must allow for bi-directional formulas
-			- 3 fields (or more) all have formula
-			- input values in first n fields, the last will be calculated by the formula
-			- the oldest updated field will be set to formula if a new field is updated manually
-		- Formulas can have any of the following logic
-			- Arithmetics: +,-,*,/,^,log ... etc
-			- logical operators such as: and, or, not, xor, xnor ... etc
-			- if conditions such as: if, else if, else
-			- conditionals such as >,<,>=,<=,=,!= ... etc
-			- Date arithmatics and conditionals
-			- String operations: substring, concatenate, split ... etc
-			- Lookup functions??
-			- Rollup fields (for lineitems/sub-records)
 
 - Transactional Processing
 	- The system must allow for transactional processing
@@ -50,13 +32,6 @@
 		- Similar to a booking calendar
 		- Similar to seat availablity on air-planes
 		- This requires transactional processing
-
-- File Management
-	- The system must provide the capability to upload files
-		- The system must provide the capability to resume upload/download
-	- The system must provide OCR capability to generate searchable content for files
-	- The system must provide the capability to store files in a tag-based file system
-		- This will allow better classification and better accessability of files
 
 - The system must provide functionality to provide digitally signed documents
 	- This functionality must also allow integration with 3rd party service providers
