--- a/0.0.0.0/requirements.txt
+++ b/0.0.0.0/requirements.txt
@@ -44,3 +44,5 @@
 
 - The system must provide functionality to provide digitally signed documents
 	- This functionality must also allow integration with 3rd party service providers
+
+- The system must provide native visualization and charting capability to build dashboards and reports in the same platform.
